--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	overflow: hidden;
+	background-color: black;
 }
 ol, ul {
 	list-style: none;
