--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	overflow: hidden;
-	background-color: black;
+	background-color: rgb(23, 83, 96);
 }
 ol, ul {
 	list-style: none;
