--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,10 @@
 
 #app h1{ 
   font-weight: 700;
-  font-size: 4em;
-  z-index: 3;  
+  font-size: 4em;  
 }
-
+ 
 #myThreeJsCanvas{
-  position: absolute;
-  top: 20%;
-  left: 36%;
-  z-index: -1;
+  z-index: 1;
+  background-color: rgba(255, 0, 0, 0.267);
 }
