--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
   font-size: 4em;  
 }
  
-#myThreeJsCanvas{
+canvas{
   z-index: 1;
   background-color: rgba(255, 0, 0, 0.267);
+  height: 100vh;
 }
